# bike-service

./: .gitignore  Cargo.toml  Dockerfile  README.md
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml
backend/.sqlx/: query-0456b1a8515e52ae28ea01bb9a589075b0959689ed5853dcf47c4b64b4c229b7.json  query-0ebf9f8e767ebafd6d36efd2d2b607080d66c361a85da221d8f84cdc3b399039.json  query-1d6ce1a710709370d81409485dd6552906dd8f95f1f4997be4f74da5a4e3e94d.json  query-27835965585c8b66ef75d0c7474ec084aadec511b16a8aa1acd851278165a0bd.json  query-2a237bf5d9cf82c29d111cfc9fb0f2895b16c207182c75fbb36f190b78a4d6b1.json  query-346320d7e4cb45470a95d31cb8b9d0a9538a00b04b11d7186431389b1e4a856f.json  query-393a97ec315d6ce33cf1785daa5fcbb0a9b14b68da91a35dcb152ca1d99221a9.json  query-3cbc96308de4b9f1010c97174c803f026a1a28e27578e3dbd825ad1a6fc7ee26.json  query-3f07297d36b5bb312160774131cc999313ee876ada01b5c81e7d28b799241100.json  query-469e95cd0e4bf0258ec1423b6aca471fcf0574b2c72f27591bc020a6e57a3336.json  query-496643c2ed421c51426106a34eeae6e2728f1494ac8c5bc95bbc24c52746b9c0.json  query-49fff0145bd0ac56f092d12b94412125f6ef51fd8768fb8224dc6540f6bd182c.json  query-4df467e090a8ca2c17cf46481e0130084c968e8907c3c0b5bf732919b5efdaf1.json  query-500f1c273591e435faaf50a904973f9b17dba9d2d02754e3501d9abb3e072fda.json  query-50e8faa2985cdb67f6e1169bc0954f352f4c95b20cabd0fa0014241f489b7ce2.json  query-52ceb399b72bac94e8e0aa116d0408ce624865b03d7032b7b3ea21ac4ca688b5.json  query-52df27fcb79105b5d53508a2048a4a11eb3ec00263c7fbf22daefd2cd8d4d53d.json  query-57eaa9107647e1ed7a5f6b5b6c989a6a77b731645f0319b09e0522001b3cd8c0.json  query-58efbd5c769ad92cc76f9622ef112f2a91761ff838a929a8c46ef02180d50ca3.json  (+29 more)
backend/migrations/: 20240504124911_add_bikes.sql  (+7 more)
(+226 files in other folders)
