[package]
name = "bike-service"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = "0.12.1"
axum = { version = "0.7.4", features = ["multipart", "macros"] }
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
dotenv = "0.15.0"
itertools = "0.12.1"
rusqlite = "=0.30.0"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "=0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
csv = "1.3.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
