[package]
name = "bike-service"
version = "2.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.8.4", features = ["multipart", "macros"] }
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
dotenv = "0.15.0"
rusqlite = "=0.30.0"
serde = { version = "1.0.196", features = ["derive"] }
sqlx = { version = "=0.7.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.35.1", features = ["macros", "rt", "rt-multi-thread"] }
csv = "1.3.0"
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
rand = { version = "0.9.1", features = ["std"] }
hex = "0.4.3"
uuid = { version = "1.9.1", features = ["serde", "v4"] }
reqwest = { version = "0.12.5", features = ["json"] }
